fix spacing around single page file view

--- a/app/assets/stylesheets/components/_drs-item.scss
+++ b/app/assets/stylesheets/components/_drs-item.scss
@@ -17,3 +17,7 @@
 #single_page{
   text-align:center;
 }
+
+.span12.single_page{
+  margin-left:0;
+}
